--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
             </a>
 
-            <a class="card" href="research.html">
+            <a class="card" href="./research.html">
                 <div class="background" style="background-image: url(./Images/sresearch.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
